# little-bird-in-tauri

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: MainPage.tsx  Spotlight.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: desktop.json  dialog.json  migrated.json
src-tauri/src/: command.rs  main.rs
src/components/shared/: ModeToggle.tsx
src/components/ui/: avatar.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  navigation-menu.tsx
src/hooks/: useEscape.tsx
src/routes/: index.tsx  spotlight.tsx
